fixed mistake in the name of the link

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="menu__items">
                 <a class="home" href="#">Home</a>
                 <a class="store" href="#">Store</a>
-                <a class="why" href="#">Why iQud?</a>
+                <a class="why" href="#">Why iOud?</a>
                 <a class="story" href="#">Our story</a>
                 <a class="about" href="#">About us</a>
                 <div class="btn">
